# gvdrive

./: run.sh  set.sh
src/gv_package/: CMakeLists.txt  package.xml
src/gv_package/config/: motors.yaml
src/gv_package/include/: GVdrive.hpp  soem_helper.hpp
src/gv_package/include/soem/: CMakeLists.txt
src/gv_package/include/soem/oshw/linux/: nicdrv.c  oshw.h
src/gv_package/include/soem/soem/: ethercattype.h  soem.h
src/gv_package/include/soem/test/linux/eepromtool/: CMakeLists.txt
src/gv_package/include/soem/test/linux/firm_update/: CMakeLists.txt  firm_update.c
src/gv_package/include/soem/test/linux/simple_test/: CMakeLists.txt
src/gv_package/include/soem/test/linux/slaveinfo/: CMakeLists.txt  slaveinfo.c
src/gv_package/include/soem/test/simple_ng/: CMakeLists.txt
src/gv_package/src/: GVdrive.cpp  control.cpp
